--- a/career.html
+++ b/career.html
@@ -486,7 +486,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(window).scroll(function () {
             if ($(window).scrollTop() > 400) {
