--- a/career.html
+++ b/career.html
@@ -508,6 +508,7 @@ $(function () {
 
             var valid = true;
             if (!$('#customer_first_name').val().trim()) {
+                console.log("f");
                 $('#customer_fname').text("First name is required.");
                 valid = false;
             }
