--- a/career.html
+++ b/career.html
@@ -507,10 +507,11 @@ $(function () {
             $(".text-danger").text("");
 
             var valid = true;
-            if (!$('#customer_first_name').val().trim()) {
-                console.log("f");
-                $('#customer_fname').text("First name is required.");
-                valid = false;
+
+            if (valid == true) {
+                
+                console.log("ok");
+              
             }
 
             if (!$('#customer_last_name').val().trim()) {
