--- a/contactus.html
+++ b/contactus.html
@@ -269,12 +269,12 @@
           <form method="post" id="detaform" class="form_container_in">
             <div class="row form_field_container flex-column flex-sm-row ">
               <div class="col">
-                <input type="text" name="name" id="name" placeholder="First Name*" class="form-control field"
+                <input type="text" name="first_name" id="name" placeholder="First Name*" class="form-control field"
                   aria-label="First name" required>
                   <p id="name_err" class="text-danger"></p>
               </div>
               <div class="col ">
-                <input type="text" name="name" id="lname" placeholder="Last Name*" class="form-control field"
+                <input type="text" name="last_name" id="lname" placeholder="Last Name*" class="form-control field"
                   aria-label="Last name" required>
                   <p id="l_name_err" class="text-danger"></p>
               </div>
@@ -285,7 +285,7 @@
                 <p id="email_err" class="text-danger"></p>
               </div>
               <div class="col ">
-                <input type="number" name="phone_number" id="number" placeholder="Phone Number*" required
+                <input type="number" name="number" id="number" placeholder="Phone Number*" required
                   class="field form-control">
                   <p id="number_err" class="text-danger"></p>
               </div>
@@ -298,8 +298,7 @@
             </div>
             <div class="sparkle-button contactus-form-btn mb-3 ms-2">
               <div class="sparkle-button ">
-                <button class="btn2 d-flex align-items-center" 
-                  onclick=" contact()">
+                <button class="btn2 d-flex align-items-center">
                     <span class="about-btn d-flex align-items-center justify-content-center">
                       <i class="fa-solid fa-arrow-up-long"></i>
                     </span>
