--- a/contactus.html
+++ b/contactus.html
@@ -716,29 +716,45 @@
     });
   </script>
   <script>
-    $(function() {
-       $("form#detaform").submit(function(e) {
-            e.preventDefault();
-           $('.contact-form-section').addClass('active');
-            var formData = new FormData(this);
+     $(function () {
+            $("form#detaform").submit(function (e) {
+                e.preventDefault();
+                    var formData = new FormData(this);
 
-              console.log(formData);
-
-            $.ajax({
-                url: "https://ecomaxlubricant.com/api/index.php?a=contact",
-                type: 'POST',
-                data: formData,
-                success: function (data) {
-                    console.log(data);
-                    alert(data);
-                    $('.contact-form-section').removeClass('active');
-                },
-                cache: false,
-                contentType: false,
-                processData: false
+                    $.ajax({
+                        url: "https://ecomaxlubricant.com/api/index.php?a=career",
+                        type: 'POST',
+                        data: formData,
+                        success: function (data) {
+                            alert(data);
+                        },
+                        cache: false,
+                        contentType: false,
+                        processData: false
+                    }); 
             });
         });
-    });
+    // $(function() {
+    //    $("form#detaform").submit(function(e) {
+    //         e.preventDefault();
+    //        $('.contact-form-section').addClass('active');
+    //         var formData = new FormData(this);
+    //           console.log(formData);
+    //         $.ajax({
+    //             url: "https://ecomaxlubricant.com/api/index.php?a=contact",
+    //             type: 'POST',
+    //             data: formData,
+    //             success: function (data) {
+    //                 console.log(data);
+    //                 alert(data);
+    //                 $('.contact-form-section').removeClass('active');
+    //             },
+    //             cache: false,
+    //             contentType: false,
+    //             processData: false
+    //         });
+    //     });
+    // });
     // const contact = () => {
     //   let name = document.getElementById("name");
     //   let lname = document.getElementById("lname");
