--- a/contactus.html
+++ b/contactus.html
@@ -266,7 +266,7 @@
           <div class="loader-section">
             <span class="loader"></span>
           </div>
-          <form method="post" id="careerForm" class="form_container_in">
+          <form method="post" id="detaform" class="form_container_in">
             <div class="row form_field_container flex-column flex-sm-row ">
               <div class="col">
                 <input type="text" name="first_name" id="name" placeholder="First Name*" class="form-control field"
@@ -716,45 +716,28 @@
     });
   </script>
   <script>
-     $(function () {
-            $("form#careerForm").submit(function (e) {
-                e.preventDefault();
-                    var formData = new FormData(this);
 
-                    $.ajax({
-                        url: "https://ecomaxlubricant.com/api/index.php?a=career",
-                        type: 'POST',
-                        data: formData,
-                        success: function (data) {
-                            alert(data);
-                        },
-                        cache: false,
-                        contentType: false,
-                        processData: false
-                    }); 
+    $(function() {
+       $("form#detaform").submit(function(e) {
+            e.preventDefault();
+           $('.contact-form-section').addClass('active');
+            var formData = new FormData(this);
+              console.log(formData);
+            $.ajax({
+                url: "https://ecomaxlubricant.com/api/index.php?a=contact",
+                type: 'POST',
+                data: formData,
+                success: function (data) {
+                    console.log(data);
+                    alert(data);
+                    $('.contact-form-section').removeClass('active');
+                },
+                cache: false,
+                contentType: false,
+                processData: false
             });
         });
-    // $(function() {
-    //    $("form#detaform").submit(function(e) {
-    //         e.preventDefault();
-    //        $('.contact-form-section').addClass('active');
-    //         var formData = new FormData(this);
-    //           console.log(formData);
-    //         $.ajax({
-    //             url: "https://ecomaxlubricant.com/api/index.php?a=contact",
-    //             type: 'POST',
-    //             data: formData,
-    //             success: function (data) {
-    //                 console.log(data);
-    //                 alert(data);
-    //                 $('.contact-form-section').removeClass('active');
-    //             },
-    //             cache: false,
-    //             contentType: false,
-    //             processData: false
-    //         });
-    //     });
-    // });
+    });
     // const contact = () => {
     //   let name = document.getElementById("name");
     //   let lname = document.getElementById("lname");
