--- a/contactus.html
+++ b/contactus.html
@@ -266,47 +266,48 @@
           <div class="loader-section">
             <span class="loader"></span>
           </div>
-          <form method="post" id="detaform" class="form_container_in">
-            <div class="row form_field_container flex-column flex-sm-row ">
-              <div class="col">
-                <input type="text" name="first_name" id="name" placeholder="First Name*" class="form-control field"
-                  aria-label="First name" required>
-                  <p id="name_err" class="text-danger"></p>
-              </div>
-              <div class="col ">
-                <input type="text" name="last_name" id="lname" placeholder="Last Name*" class="form-control field"
-                  aria-label="Last name" required>
-                  <p id="l_name_err" class="text-danger"></p>
-              </div>
+          
+          <form class="form_container_in needs-validation" enctype="multipart/form-data" id="detaform" novalidate>
+            <div class="row form_field_container flex-column flex-sm-row">
+                <div class="col">
+                    <input type="text" name="first_name" id="validationCustom01"   placeholder="First Name*"
+                        class="form-control first_name field" aria-label="First name" required />
+                </div>
+                <div class="col">
+                    <input type="text" name="last_name" id="customer_last_name" placeholder="Last Name*"
+                        class="form-control field" aria-label="Last name" required />
+                    <p class="text-danger" id="customer_lname"></p>
+                </div>
             </div>
             <div class="row form_field_container flex-column flex-sm-row">
-              <div class="col ">
-                <input type="email" name="email" id="email" placeholder="Email*" required class="field form-control">
-                <p id="email_err" class="text-danger"></p>
-              </div>
-              <div class="col ">
-                <input type="number" name="number" id="number" placeholder="Phone Number*" required
-                  class="field form-control">
-                  <p id="number_err" class="text-danger"></p>
-              </div>
+                <div class="col">
+                    <input type="email" name="email" id="customer_email" placeholder="Email*" required
+                        class="field form-control" />
+                    <p class="text-danger" id="customer_email_w"></p>
+                </div>
+                <div class="col">
+                    <input type="number" name="number" id="customer_number" placeholder="Phone Number*"
+                        required class="field form-control" />
+                    <p class="text-danger" id="customer_number_w"></p>
+                </div>
             </div>
-            <div class="row form_field_container flex-column flex-sm-row ">
-              <div class="col ">
-                <textarea placeholder="Your Message" name="career_message"
-                  class="form-control w-100 field message_field"></textarea>
-              </div>
+            <div class="row form_field_container flex-column flex-sm-row">
+                <div class="col">
+                    <textarea placeholder="Your Message" id="customer_message" name="career_message"
+                        class="form-control w-100 field message_field"></textarea>
+                </div>
             </div>
-            <div class="sparkle-button contactus-form-btn mb-3 ms-2">
-              <div class="sparkle-button ">
-                <button class="btn2 d-flex align-items-center">
-                    <span class="about-btn d-flex align-items-center justify-content-center">
-                      <i class="fa-solid fa-arrow-up-long"></i>
-                    </span>
-                     <span class="text"> Submit</span>
-                </button>
-              </div>
+            <div class="sparkle-button">
+                <div class="sparkle-button career-form-btn">
+                    <button class="btn2 d-flex align-items-center" type="submit">
+                        <span class="about-btn d-flex align-items-center justify-content-center">
+                            <i class="fa-solid fa-arrow-up-long"></i>
+                        </span>
+                        <span class="text">Submit</span>
+                    </button>
+                </div>
             </div>
-          </form>
+        </form>
           <div class="heading_container text-center">
             <p id="Submit-form" class="heading_description"></p>
           </div>
@@ -519,6 +520,9 @@
     crossorigin="anonymous"></script>
   <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
   <!-- Resources -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+  crossorigin="anonymous"></script>
   <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
   <script src="https://cdn.amcharts.com/lib/4/maps.js"></script>
   <script src="https://cdn.amcharts.com/lib/4/geodata/worldLow.js"></script>
@@ -714,6 +718,27 @@
         $(".scrollbar").removeClass("show_scroll_btn");
       }
     });
+
+    (function () {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.querySelectorAll('.needs-validation')
+
+            // Loop over them and prevent submission
+            Array.prototype.slice.call(forms)
+                .forEach(function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (!form.checkValidity()) {
+                            event.preventDefault()
+                            event.stopPropagation()
+                        }
+
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+        })()
+
   </script>
   <script>
 
