--- a/contactus.html
+++ b/contactus.html
@@ -721,7 +721,6 @@
 
     (function () {
             'use strict'
-
             // Fetch all the forms we want to apply custom Bootstrap validation styles to
             var forms = document.querySelectorAll('.needs-validation')
 
@@ -738,65 +737,58 @@
                     }, false)
                 })
         })()
-
   </script>
   <script>
 
+    // $(function() {
+    //    $("form#detaform").submit(function(e) {
+    //         e.preventDefault();
+    //        $('.contact-form-section').addClass('active');
+    //         var formData = new FormData(this);
+    //           console.log(formData);
+    //         $.ajax({
+    //             url: "https://ecomaxlubricant.com/api/index.php?a=contact",
+    //             type: 'POST',
+    //             data: formData,
+    //             success: function (data) {
+    //                 console.log(data);
+    //                 alert(data);
+    //                 $('.contact-form-section').removeClass('active');
+    //             },
+    //             cache: false,
+    //             contentType: false,
+    //             processData: false
+    //         });
+    //     });
+    // });
+
     $(function() {
-       $("form#detaform").submit(function(e) {
-            e.preventDefault();
-           $('.contact-form-section').addClass('active');
-            var formData = new FormData(this);
-              console.log(formData);
-            $.ajax({
-                url: "https://ecomaxlubricant.com/api/index.php?a=contact",
-                type: 'POST',
-                data: formData,
-                success: function (data) {
-                    console.log(data);
-                    alert(data);
-                    $('.contact-form-section').removeClass('active');
-                },
-                cache: false,
-                contentType: false,
-                processData: false
-            });
+    $("form#detaform").submit(function(e) {
+        e.preventDefault();
+        $('.contact-form-section').addClass('active');
+        var formData = new FormData(this);
+        console.log(formData); // This won't output the form data as expected in the console. Consider logging form data differently.
+        $.ajax({
+            url: "https://ecomaxlubricant.com/api/index.php?a=contact",
+            type: 'POST',
+            data: formData,
+            success: function (data) {
+                console.log(data);
+                alert(data);
+                $('.contact-form-section').removeClass('active');
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                console.error("Error: " + textStatus, errorThrown);
+                $('.contact-form-section').removeClass('active');
+            },
+            cache: false,
+            contentType: false,
+            processData: false
         });
     });
-    // const contact = () => {
-    //   let name = document.getElementById("name");
-    //   let lname = document.getElementById("lname");
-    //   let number = document.getElementById("number");
-    //   let email = document.getElementById("email");
+});
 
-    //   event.preventDefault();
-    //   if (name.value == "") {
-    //     document.getElementById("name_err").innerHTML = "Please fill in this field";
-    //   }
-    //   if (lname.value == "") {
-    //     document.getElementById("l_name_err").innerHTML = "Please fill in this field";
-    //   }
-    //   if (number.value == 10 || number.value == "") {
-    //     document.getElementById("number_err").innerHTML = "Please fill in this field";
-    //   }
-    //   if (email.value == "") {
-    //     document.getElementById("email_err").innerHTML = "Please fill in this field";
-    //   }
-    //   if (name.value == "" || lname.value == " " || number.value == "" || email.value == "") { 
-    //   } else {
 
-    //     let detaform = document.getElementById("detaform")
-
-    //     detaform.style.display = "none";
-
-    //     let tank = `Thank you for your interest in Ecomax, your trusted manufacturer and supplier of lubricant engine oil. We're
-    //       here to assist you with any inquiries, feedback, or requests you may have. Please feel free to reach out to us
-    //       using the information above:`
-    //     let mel = ""
-
-    //     tank = document.getElementById("Submit-form").innerHTML = tank;
-    //   }
-    // }
   </script>
 </body>
 </html>
