--- a/contactus.html
+++ b/contactus.html
@@ -270,31 +270,26 @@
           <form class="form_container_in needs-validation" enctype="multipart/form-data" id="detaform" novalidate>
             <div class="row form_field_container flex-column flex-sm-row">
                 <div class="col">
-                    <input type="text" name="first_name" id="validationCustom01"   placeholder="First Name*"
-                        class="form-control first_name field" aria-label="First name" required />
+                    <input type="text" name="first_name" id="validationCustom01" placeholder="First Name*" class="form-control first_name field" aria-label="First name" required />
                 </div>
                 <div class="col">
-                    <input type="text" name="last_name" id="customer_last_name" placeholder="Last Name*"
-                        class="form-control field" aria-label="Last name" required />
+                    <input type="text" name="last_name" id="customer_last_name" placeholder="Last Name*" class="form-control field" aria-label="Last name" required />
                     <p class="text-danger" id="customer_lname"></p>
                 </div>
             </div>
             <div class="row form_field_container flex-column flex-sm-row">
                 <div class="col">
-                    <input type="email" name="email" id="customer_email" placeholder="Email*" required
-                        class="field form-control" />
+                    <input type="email" name="email" id="customer_email" placeholder="Email*" required class="field form-control" />
                     <p class="text-danger" id="customer_email_w"></p>
                 </div>
                 <div class="col">
-                    <input type="number" name="number" id="customer_number" placeholder="Phone Number*"
-                        required class="field form-control" />
+                    <input type="number" name="number" id="customer_number" placeholder="Phone Number*" required class="field form-control" />
                     <p class="text-danger" id="customer_number_w"></p>
                 </div>
             </div>
             <div class="row form_field_container flex-column flex-sm-row">
                 <div class="col">
-                    <textarea placeholder="Your Message" id="customer_message" name="career_message"
-                        class="form-control w-100 field message_field"></textarea>
+                    <textarea placeholder="Your Message" id="customer_message" name="career_message" class="form-control w-100 field message_field"></textarea>
                 </div>
             </div>
             <div class="sparkle-button">
@@ -308,6 +303,7 @@
                 </div>
             </div>
         </form>
+
           <div class="heading_container text-center">
             <p id="Submit-form" class="heading_description"></p>
           </div>
@@ -739,31 +735,30 @@
         })()
   </script>
   <script>
-
-    $(function() {
-       $("form#detaform").submit(function(e) {
-            e.preventDefault();
-           $('.contact-form-section').addClass('active');
-            var formData = new FormData(this);
-              console.log(formData);
-            $.ajax({
-                url: "https://ecomaxlubricant.com/api/index.php?a=contact",
-                type: 'POST',
-                data: formData,
-                success: function (data) {
-                    console.log(data);
-                    alert(data);
-                    $('.contact-form-section').removeClass('active');
-                },
-                cache: false,
-                contentType: false,
-                processData: false
-            });
+$(function() {
+    $("form#detaform").submit(function(e) {
+        e.preventDefault();
+        $('.contact-form-section').addClass('active');
+        var formData = new FormData(this);
+        $.ajax({
+            url: "https://ecomaxlubricant.com/api/index.php?a=contact",
+            type: 'POST',
+            data: formData,
+            contentType: false,
+            processData: false,
+            success: function (data) {
+                console.log(data);
+                alert(data.message);
+                $('.contact-form-section').removeClass('active');
+            },
+            error: function(xhr, status, error) {
+                console.error(xhr.responseText);
+                alert('An error occurred: ' + xhr.responseText);
+                $('.contact-form-section').removeClass('active');
+            }
         });
     });
-
-
-
+});
   </script>
 </body>
 </html>
